

Change of behavior 
-------------------

- Look & Feel url hardcoded in ini

  Because of enhancement  "#15672: Use ini setting for menu items in admin", url to
  Look and Feel object is defined in menu.ini[Leftmenu_setup]Links[]
  ( and if you have re-enabled design tab also menu.ini[Leftmenu_design]Links[] )
  using object id 54. If you have an old install this object id might be a different one
  and you'll need to override the setting.

- eZTreeMenuOperator/ 'treemenu' does not return pre generated data_map

  Because of enhancement  "#3005: Increase performance eZTreeMenuOperator", data_map
  is no longer part of the hash-structure for each element, and you'll need to access
  it as normal using the node (so $item.node.data_map instead of $item.data_map ).
  

eZContentClass::instantiate() changes
-------------------------------------

- $userID now has to be false if you want to create objects for current user
  If you don't set it to false, new object id will no longer be stored in user
  session for use by policy system to let anonymous user re edit object. 


Deprecated methods
------------------

- ezi18n() and ezx18n() functions has been deprecated in favor of new
  eZi18n::translate() function that takes advantage of autoloading so you don't need
  to requrie_once the i18n.php file. These two function will be removed in a future
  version.


Renamed methods
---------------

Removed features
----------------

Removed methods
---------------

- All internal i18n.php functions have been removed, as in:
  ezcurrentLanguage(), ezinsertarguments() and eZTranslateText()
  
- eZArchiveHandler
  This class and related sub-class eZTARArchiveHandler has been removed
  They have been deprecated since 4.1.
  
- eZModuleManager
  eZModuleManager class has been deprecated since 4.1, in favor of the setting
  [ModuleSettings] ModuleList in module.ini

- eZImportLookupTable
  This class is removed after being deprecated since 4.1