@@ -4,6 +4,7 @@ Changes from 4.3.0alpha1 to 4.3.0beta1
 - Implemented enhancement #15371: object_count_by_user_id counts empty-non-published drafts
 - Implemented enhancement #16192: Remove deprecated eZArchiveHandler class and sub classes
 - Implemented enhancement #16193: Remove deprecated eZModuleManager and eZImportLookupTable classes
+- Implemented enhancement #16200: Deprecate kernel/common/ezincludefunctions.php 
 
 *Design:
 
